--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "monaco-languageclient": "^0.18.1",
+    "particles.js": "^2.0.0",
     "socket.io-client": "^4.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
